--- a/SpaceWay/Views/Flights/SearchFlightResultsOut.cshtml
+++ b/SpaceWay/Views/Flights/SearchFlightResultsOut.cshtml
@@ -5,7 +5,7 @@
 }
 <h2>SearchFlightResultsOut</h2>
 
-@if (ViewBag.A == "t")
+@if (ViewBag.NoFlights == "true")
 {
     <h4>Unfortunately, there are no flights matching your search.</h4>
 }
