--- a/SpaceWay/Views/Aircrafts/Delete.cshtml
+++ b/SpaceWay/Views/Aircrafts/Delete.cshtml
@@ -37,6 +37,7 @@ else
             <div class="row justify-content-center">
                 <div class="col-6">
                     <h4>Are you sure you want to delete this?</h4><br />
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="row justify-content-center">
