--- a/SpaceWay/Views/Stations/Delete.cshtml
+++ b/SpaceWay/Views/Stations/Delete.cshtml
@@ -7,6 +7,7 @@
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
+@Html.ValidationSummary(true, "", new { @class = "text-danger" })
 <div>
     <h4>Station</h4>
     <hr />
@@ -37,7 +38,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
