--- a/SpaceWay/Views/Home/Statistics.cshtml
+++ b/SpaceWay/Views/Home/Statistics.cshtml
@@ -13,8 +13,8 @@
 }
 else
 {
-        <div id='dashboard'>
-            <h4 class="blah">Reservations by Month &emsp;&emsp;&emsp;Amount of Passengers For Each Star</h4>
+        <div id='dashboard' >
+            <h4 class="a">&emsp;&emsp;&emsp;&emsp;Reservations by Month &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Amount of Passengers For Each Star</h4>
         </div>
 
         <script src="~/Content/js/d3.v3.min.js"></script>
