organize nasa + delete comments in main index

--- a/SpaceWay/Views/Home/Nasa.cshtml
+++ b/SpaceWay/Views/Home/Nasa.cshtml
@@ -1,18 +1,20 @@
 ﻿@{
     ViewBag.Title = "Nasa";
 }
-<h2 class="text-white mb-4">NASA Astronomy Picture Of The Day</h2>
-<h2 class="text-white mb-4" id="title"></h2>
+
 <div class="nasa">
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            <h3>Date: <span id="date"></span></h3><br />
-            <img id="img" src="" alt="NASA Picture Of The Day" height="50%" width="50%"><br />
-
+            <h3 class="text-white mb-4">NASA Astronomy Picture Of The Day</h3>
+            <h3 class="text-white mb-4" id="title"></h3>
             <p id="explanation"></p><br />
         </dt>
     </dl>
+</div>
+<div class="nasa">
+    <h3>Date: <span id="date"></span></h3><br />
+    <img id="img" src="" alt="NASA Picture Of The Day" height="130%" width="130%"><br />
 </div>
 
 
