--- a/SpaceWay/Views/Aircrafts/Delete.cshtml
+++ b/SpaceWay/Views/Aircrafts/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SpaceWay.Models.Aircraft
+﻿ @model SpaceWay.Models.Aircraft
 
 @{
     ViewBag.Title = "Delete";
@@ -9,51 +9,56 @@
 }
 else
 {
-        <div class="container">
-            <h2>Delete</h2>
-            <div class="row">
-                <div class="col">
-                    <h4>Aircraft</h4>
-                    <hr />
-                    <dl class="dl-horizontal">
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Level)
-                        </dt>
+    <div class="container">
+        <h2>Delete</h2>
+        <div class="row">
+            <div class="col">
+                <h4>Aircraft</h4>
+                <hr />
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Level)
+                    </dt>
 
-                        <dd>
-                            @Html.DisplayFor(model => model.Level)
-                        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.Level)
+                    </dd>
 
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Seats)
-                        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Seats)
+                    </dt>
 
-                        <dd>
-                            @Html.DisplayFor(model => model.Seats)
-                        </dd>
-                    </dl>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-6">
-                    <h4>Are you sure you want to delete this?</h4><br />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-2">
-                    @using (Html.BeginForm())
-                    {
-                        @Html.AntiForgeryToken()
-
-                        <div class="form-actions no-color">
-                            <input type="submit" value="Delete" class="btn btn-default" />
-                        </div>
-                    }
-                </div>
-                <div class="col-2">
-                    @Html.ActionLink("Back to List", "Index")
-                </div>
+                    <dd>
+                        @Html.DisplayFor(model => model.Seats)
+                    </dd>
+                </dl>
             </div>
         </div>
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <h4>Are you sure you want to delete this?</h4><br />
+
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-6">
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-2">
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div class="form-actions no-color">
+                        <input type="submit" value="Delete" class="btn btn-default" />
+                    </div>
+                }
+            </div>
+            <div class="col-2">
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        </div>
+    </div>
 }
