--- a/SpaceWay/Views/Reservations/Edit.cshtml
+++ b/SpaceWay/Views/Reservations/Edit.cshtml
@@ -16,71 +16,65 @@ else
                 {
                     @Html.AntiForgeryToken()
 
-                <div class="form-horizontal">
-                    <h4>Reservation Edit</h4>
-                    <hr />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @Html.HiddenFor(model => model.ReservationID)
+                    <div class="form-horizontal">
+                        <h4>Reservation Edit</h4>
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        @Html.HiddenFor(model => model.ReservationID)
 
-                    <div class="row-group mt-0">
-                        @Html.LabelFor(model => model.PassengerID, "PassengerID", htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-4">
-                            @Html.DropDownList("PassengerID", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.PassengerID, "", new { @class = "text-danger" })
+                        <div class="row-group mt-0">
+                            @Html.LabelFor(model => model.PassengerID, "PassengerID", htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-4">
+                                @Html.DropDownList("PassengerID", null, htmlAttributes: new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.PassengerID, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="row-group">
-                        @Html.LabelFor(model => model.OrderDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-4">
-                            @Html.EditorFor(model => model.OrderDate, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.OrderDate, "", new { @class = "text-danger" })
+                        <div class="row-group">
+                            @Html.LabelFor(model => model.OutboundID, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-4">
+                                @Html.EditorFor(model => model.OutboundID, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.OutboundID, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="row-group">
-                        @Html.LabelFor(model => model.OutboundID, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-4">
-                            @Html.EditorFor(model => model.OutboundID, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.OutboundID, "", new { @class = "text-danger" })
+                        <div class="row-group">
+                            @Html.LabelFor(model => model.InboundID, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-4">
+                                @Html.EditorFor(model => model.InboundID, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.InboundID, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="row-group">
-                        @Html.LabelFor(model => model.InboundID, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-4">
-                            @Html.EditorFor(model => model.InboundID, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.InboundID, "", new { @class = "text-danger" })
+                        <div class="row-group">
+                            @Html.LabelFor(model => model.NumOfTickets, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-4">
+                                @Html.EditorFor(model => model.NumOfTickets, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.NumOfTickets, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="row-group">
-                        @Html.LabelFor(model => model.NumOfTickets, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-4">
-                            @Html.EditorFor(model => model.NumOfTickets, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.NumOfTickets, "", new { @class = "text-danger" })
+                        <div class="row-group">
+                            @Html.LabelFor(model => model.TotalPrice, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-4">
+                                @Html.EditorFor(model => model.TotalPrice, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.TotalPrice, "", new { @class = "text-danger" })
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="row-group">
-                        @Html.LabelFor(model => model.TotalPrice, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-4">
-                            @Html.EditorFor(model => model.TotalPrice, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.TotalPrice, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+                        @Html.HiddenFor(m => m.OrderDate)
 
-                    <div class="row-group">
-                        <div class="col-6 mt-3">
-                            <input type="submit" value="Save" class="btn btn-default" />
+                        <div class="row-group">
+                            <div class="col-6 mt-3">
+                                <input type="submit" value="Save" class="btn btn-default" />
+                            </div>
+                        </div>
+                        <div class="row-group">
+                            <div class="col-6 mt-3">
+                                @Html.ActionLink("Back to List", "Index")
+                            </div>
                         </div>
                     </div>
-                    <div class="row-group">
-                        <div class="col-6 mt-3">
-                    @Html.ActionLink("Back to List", "Index")
-                        </div>
-                    </div>
-                </div>
                 }
             </div>
         </div>
