--- a/SpaceWay/Views/Stations/Delete.cshtml
+++ b/SpaceWay/Views/Stations/Delete.cshtml
@@ -41,19 +41,21 @@ else
                         </dd>
 
                     </dl>
-
+                </div>
+                </div>
+                <div class="col text-center">
                     @using (Html.BeginForm())
                     {
                         @Html.AntiForgeryToken()
-                    <div class="form-actions text-center no-color">
-                        <h4>Are you sure you want to delete this?</h4>
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        <input type="submit" value="Delete" class="btn btn-default" /> |
-                        @Html.ActionLink("Back to List", "Index")
-                    </div>
+                        <div class="form-actions text-center no-color">
+                            <h4>Are you sure you want to delete this?</h4>
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            <input type="submit" value="Delete" class="btn btn-default" /> |
+                            @Html.ActionLink("Back to List", "Index")
+                        </div>
                     }
                 </div>
+
             </div>
-        </div>
     </div>
 }
