--- a/SpaceWay/Views/Aircrafts/Details.cshtml
+++ b/SpaceWay/Views/Aircrafts/Details.cshtml
@@ -10,12 +10,10 @@
 else
 {
 
-    <h2>Details</h2>
-
     <div class="container">
         <div class="row">
             <div class="col">
-                <h4>Aircraft</h4>
+                <h4>Aircraft Details</h4>
             </div>
         </div>
         <hr />
