--- a/SpaceWay/Views/Aircrafts/Delete.cshtml
+++ b/SpaceWay/Views/Aircrafts/Delete.cshtml
@@ -10,10 +10,9 @@
 else
 {
         <div class="container">
-            <h2>Delete</h2>
             <div class="row">
                 <div class="col">
-                    <h4>Aircraft</h4>
+                    <h4>Delete Aircraft</h4>
                     <hr />
                     <dl class="dl-horizontal">
                         <dt>
