--- a/SpaceWay/Views/Aircrafts/Edit.cshtml
+++ b/SpaceWay/Views/Aircrafts/Edit.cshtml
@@ -9,15 +9,12 @@
 }
 else
 {
-    <h2>Edit</h2>
-
-
     using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>Aircraft</h4>
+            <h4>Edit Aircraft</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.AircraftID)
