--- a/SpaceWay/Views/Reservations/AdminCreate.cshtml
+++ b/SpaceWay/Views/Reservations/AdminCreate.cshtml
@@ -20,7 +20,7 @@ else
                         <h4>Create Reservation</h4>
                         <hr />
                         <div class="form-group">
-                            @Html.LabelFor(model => model.PassengerID, "PassengerID", htmlAttributes: new { @class = "control-label col-md-2" })
+                            @Html.LabelFor(model => model.PassengerID, "Passenger Name", htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-4">
                                 @Html.DropDownList("PassengerID", null, htmlAttributes: new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.PassengerID, "", new { @class = "text-danger" })
