--- a/SpaceWay/Views/Flights/Index.cshtml
+++ b/SpaceWay/Views/Flights/Index.cshtml
@@ -32,7 +32,7 @@ else
             {
                 <div class="row">
                     <div class="col">
-                        <label>Level:</label>
+                        <label>ID:</label>
                     </div>
                     <div class="col">
                         <input type="text" name="flID" />
