--- a/SpaceWay/Views/Shared/_Layout.cshtml
+++ b/SpaceWay/Views/Shared/_Layout.cshtml
@@ -10,7 +10,9 @@
         <title>@ViewBag.Title - My ASP.NET Application</title>
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")*@
-
+    <link rel="icon"
+          type="image/png"
+          href="~/Content/Images/icon.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
